QA Test Suite Orchestration, Docker Compose Migration and Snowflake 9 support
Removed Version from Docker Compose Files
Adjusted Container mem_lmit  and shm_size setttings
Renived tmpfs settings
Add Orchestration container to further automate QA Testing

Added work around issue in mysqlShell error error handling

SNOWFLAKE. Migrated check constraint to expection when storing XML as serialized text

--- a/docker/dockerfiles/linux/MONGO40-01.yml
+++ b/docker/dockerfiles/linux/MONGO40-01.yml
@@ -1,11 +1,12 @@
-version: "2.4"
+
 services:
 
   MONGO40-01: 
     container_name: MONGO40-01
+    hostname: MONGO40-01
     image:  mongo:4
     mem_limit: '12gb'
-    shm_size: '4gb'
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
