--- a/docker/dockerfiles/linux/docker-compose.yml
+++ b/docker/dockerfiles/linux/docker-compose.yml
@@ -1,17 +1,19 @@
-version: "2.4"
+
 services:
 
   # ORA2303-01: 1521
   
   ORA1120-01: 
     container_name: ORA1120-01
+    hostname: ORA1120-01
     # image:  oracle/database:11.2.0.4-ee
     image:  yadamu/oracle:11.2.0.4
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '8gb'
     security_opt:
       - seccomp:unconfined
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       YADAMU-NET:
         aliases:
@@ -34,13 +36,15 @@ services:
   
   ORA1220-01: 
     container_name: ORA1220-01
+    hostname: ORA1220-01
     # image:  oracle/database:12.2.0.1-ee 
     image:  yadamu/oracle:12.2.0
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '8gb'
     security_opt:
       - seccomp:unconfined
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       YADAMU-NET:
         aliases:
@@ -61,13 +65,15 @@ services:
 
   ORA1803-01: 
     container_name: ORA1803-01
+    hostname: ORA1803-01
     # image:  oracle/database:18.3.0-ee
     image:  yadamu/oracle:18.3.0
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '8gb'
     security_opt:
       - seccomp:unconfined
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       YADAMU-NET:
         aliases:
@@ -88,13 +94,15 @@ services:
 
   ORA1903-01: 
     container_name: ORA1903-01
+    hostname: ORA1903-01
     # image:  oracle/database:19.3.0-ee
     image:  yadamu/oracle:19.3.0
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '8gb'
     security_opt:
       - seccomp:unconfined
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       YADAMU-NET:
         aliases:
@@ -119,9 +127,11 @@ services:
   
   MARIA11-01: 
     container_name: MARIA11-01
-    image:  mariadb:latest
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    hostname: MARIA11-01
+    image:  mariadb:11.5
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -142,9 +152,11 @@ services:
 
   MONGO80-01: 
     container_name: MONGO80-01
+    hostname: MONGO80-01
     image:  mongo:latest 
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -164,9 +176,11 @@ services:
 
   MSSQL22-01: 
     container_name: MSSQL22-01
+    hostname: MSSQL22-01
     image:  mcr.microsoft.com/mssql/server:2022-latest
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -190,9 +204,11 @@ services:
 
   MSSQL19-01: 
     container_name: MSSQL19-01
+    hostname: MSSQL19-01
     image:  mcr.microsoft.com/mssql/server:2019-latest
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -212,10 +228,12 @@ services:
 
   MYSQL90-01: 
     container_name: MYSQL90-01
-    image:  mysql:latest
+    hostname: MYSQL90-01
+    image:  mysql:9.0.1
     command: --secure-file-priv=/mnt/shared 
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     cap_add:
@@ -237,9 +255,11 @@ services:
 
   PGSQL17-01: 
     container_name: PGSQL17-01
+    hostname: PGSQL17-01
     image:  yadamu/postgres:17
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -264,9 +284,11 @@ services:
 
   VRTCA24-01: 
     container_name: VRTCA24-01
+    hostname: VRTCA24-01
     image:  vertica/vertica-ce:latest 
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
@@ -291,9 +313,11 @@ services:
         
   VRTCA10-01: 
     container_name: VRTCA10-01
+    hostname: VRTCA10-01
     image: vertica/vertica-ce:10.1.1-0
-    mem_limit: '10gb'
-    shm_size: '4gb'
+    mem_limit: '16gb'          #
+    memswap_limit: -1     # allow unlimited swap
+    shm_size: '2gb'
     networks:
       YADAMU-NET:
         aliases:
@@ -318,8 +342,10 @@ services:
 
   MINIO-01: 
     container_name: MINIO-01
+    hostname: MINIO-01
     image:  minio/minio 
     mem_limit: '1gb'
+    memswap_limit: -1     # allow unlimited swap
     command:  server /data --console-address  ":9001"
     networks:
       - YADAMU-NET
@@ -335,8 +361,10 @@ services:
     
   AZURE-01: 
     container_name: AZURE-01
+    hostname: AZURE-01
     image:   mcr.microsoft.com/azure-storage/azurite 
     mem_limit: '1gb'
+    memswap_limit: -1     # allow unlimited swap
     command: azurite-blob --blobHost 0.0.0.0 --loose --blobPort 10000 
     networks:
       - YADAMU-NET
@@ -348,8 +376,10 @@ services:
 
   YADAMU-SMB: 
     container_name: YADAMU-SMB
+    hostname: YADAMU-SMB
     image:   dperson/samba
     mem_limit: '1gb'
+    memswap_limit: -1     # allow unlimited swap
     command: -p -s "work;/mount;yes;no;yes" -n -p
     networks:
       - YADAMU-NET
