--- a/docker/dockerfiles/linux/PGSQL13-01.yml
+++ b/docker/dockerfiles/linux/PGSQL13-01.yml
@@ -1,13 +1,14 @@
-version: "2.4"
+
 services:
 
   PGSQL13-01: 
     container_name: PGSQL13-01
+    hostname: PGSQL13-01
     image:  yadamu/postgres:13 
     mem_limit: '12gb'
     security_opt:
       - seccomp:unconfined
-    shm_size: '4gb'
+    shm_size: '2gb'
     networks:
       - YADAMU-NET
     ports: 
