--- a/docker/dockerfiles/linux/VRTCA12-01.yml
+++ b/docker/dockerfiles/linux/VRTCA12-01.yml
@@ -1,11 +1,11 @@
-version: "2.4"
 services:
   
   VRTCA12-01: 
     container_name: VRTCA12-01
+    hostname: VRTCA12-01
     image:  vertica/vertica-ce:12.0.4-0 
     mem_limit: '10gb'
-    shm_size: '4gb'
+    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
     networks:
