--- a/docker/dockerfiles/windows/ORA2103-01.yml
+++ b/docker/dockerfiles/windows/ORA2103-01.yml
@@ -1,4 +1,3 @@
-version: "2.4"
 services:
 
   ORA2103-01: 
@@ -6,7 +5,7 @@ services:
     image:  yadamu/oracle:21.3.0
     isolation: hyperv
     mem_limit: 8192M
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       - YADAMU-NET
     ports: 
