--- a/docker/dockerfiles/linux/VRTCA09-01.yml
+++ b/docker/dockerfiles/linux/VRTCA09-01.yml
@@ -1,12 +1,11 @@
-
+version: "2.4"
 services:
 
  VRTCA09-01:
    container_name: VRTCA09-01
-   hostname: VRTCA09-01
    image:  dataplatform/docker-vertica
    mem_limit: '12gb'
-   shm_size: '2gb'
+   shm_size: '4gb'
    security_opt:
      - seccomp:unconfined
    networks:
