--- a/docker/dockerfiles/windows/PGSQL14-01.yml
+++ b/docker/dockerfiles/windows/PGSQL14-01.yml
@@ -1,10 +1,11 @@
+version: "2.4"
 services:
 
   PGSQL14-01: 
     container_name: PGSQL14-01
     image:  yadamu/postgres:14 
     mem_limit: '16gb'
-    shm_size: '2gb'
+    shm_size: '4gb'
     networks:
       - YADAMU-NET
     ports: 
