--- a/docker/dockerfiles/linux/IBMDB2-01.yml
+++ b/docker/dockerfiles/linux/IBMDB2-01.yml
@@ -1,16 +1,15 @@
-
+version: "3.3"
 services:
 
  # docker run -itd --name DB2TEST --privileged=true -p 50001:50000 -e LICENSE=accept -e DB2INST1_PASSWORD=oracle -e DBNAME=yadamu -v DB2TEST_DATA:/database ibmcom/db2
  IBMDB2-01:
    container_name: IBMDB2-01
-   hostname: IBMDB2-01
    image:  yadamu/db2
    security_opt:
       - label:disable    
    privileged: true
-   mem_limit: '16gb'
-   shm_size: '2gb'
+   mem_limit: '12gb'
+   shm_size: '4gb'
    networks:
      - YADAMU-NET
    ports:
