--- a/docker/dockerfiles/linux/ORA2103-01.yml
+++ b/docker/dockerfiles/linux/ORA2103-01.yml
@@ -1,17 +1,15 @@
-
+version: "2.4"
 services:
 
   ORA2103-01: 
     container_name: ORA2103-01
-    hostname: ORA2103-01
     # image:  oracle/database:21.3.0-ee
     image:  yadamu/oracle:21.3.0
     mem_limit: '16gb'
-    memswap_limit: -1     # allow unlimited swap
-    shm_size: '8gb'
+    shm_size: '4gb'
     security_opt:
       - seccomp:unconfined
-    # tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
+    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       - YADAMU-NET
     ports: 
