--- a/docker/dockerfiles/linux/TERADATA-17.yml
+++ b/docker/dockerfiles/linux/TERADATA-17.yml
@@ -1,15 +1,14 @@
-
+version: "3.3"
 services:
 
  TDATA17-01:
    container_name: TDATA17-01
-   hostname: TDATA17-01
    image:  yadamu/teradata
    security_opt:
       - label:disable    
    privileged: true
    mem_limit: '12gb'
-   shm_size: '2gb'
+   shm_size: '4gb'
    networks:
      - YADAMU-NET
    ports:
