--- a/docker/rdbms/postgres/docker/linux/dockerfile.17
+++ b/docker/rdbms/postgres/docker/linux/dockerfile.17
@@ -6,7 +6,7 @@ RUN apt update \
  && apt install -y locales \
  && apt install -y postgis postgresql-17-postgis-3 \ 
  && apt install -y postgresql-plpython3-17 \
- && apt install -y python-is-python3 python3-full \
+ && apt install -y python-is-python3 2to3  python3-full \
  && apt install -y python3-pip pipx \
  && apt install -y python3-lxml \
  && pip install lxml 
